--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 <body>
   <!-- Sections -->
   <section class="intro">
-    <h1>Scroll to See the Product</h1>
+    <img class="hero-img " src="./src/assets/monster11.png" alt="">
+    <nav>
+      <div class="logo">MONSTER</div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <div class="cart-icon">
+        <ion-icon name="cart"></ion-icon>
+      </div>
+    </nav>
+
+    <div class="content">
+      <div class="left">
+
+      </div>
+
+      <div class="right">
+
+      </div>
+
+    </div>
     <!-- <ion-icon name="heart-circle" class="icon"></ion-icon> -->
   </section>
   
