--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Sections -->
   <section class="intro">
-    <img class="hero-img " src="./src/assets/monster11.png" alt="">
+    <img class="hero-img " src="./src/assets/pink.png" alt="">
     <nav>
       <div class="logo">MONSTER</div>
       <ul class="nav-links">
