--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <!-- Sections -->
   <section class="intro">
     <img class="hero-img " src="./src/assets/pink.png" alt="">
+      <!-- <div class="glow-circle"></div> -->
+
     <nav>
       <div class="logo">MONSTER</div>
       <ul class="nav-links">
@@ -24,15 +26,28 @@
     </nav>
 
     <div class="content">
-      <div class="left">
+  <div class="left">
+    <h1>Unleash the Beast</h1>
+    <p>
+      Monster Energy fuels the hardest workers, gamers, athletes, and night owls. 
+      With bold flavors, powerful energy, and an unstoppable vibe — it’s more than a drink, 
+      it’s a lifestyle.
+    </p>
+    <button class="cta-btn">Shop Now</button>
+  </div>
 
-      </div>
+   <div class="right">
+    <!-- <img src="./src/assets/monster-can.png" alt="Monster Drink" class="product-img"> -->
+    <h1 class="product-title">Original Monster Energy</h1>
+    <p class="product-desc">
+      A smooth, refreshing blend with a powerful energy kick. Packed with taurine, 
+      caffeine, and B-vitamins to keep you going strong — day or night.
+    </p>
+        <button class="cta-btn">Feel the Energy</button>
 
-      <div class="right">
+  </div>
+</div>
 
-      </div>
-
-    </div>
     <!-- <ion-icon name="heart-circle" class="icon"></ion-icon> -->
   </section>
   
@@ -78,8 +93,29 @@
 
 
   <section class="outro">
-    <h2>End of Scroll Animation</h2>
-  </section>
+  <div class="outro-content">
+    <h2>Fuel Your Fire</h2>
+    <p>
+      Monster Energy isn’t just a drink — it’s the ultimate source of power, 
+      drive, and focus. Whether you’re chasing dreams, hitting the gym, 
+      or grinding all night, we’ve got your back. 
+    </p>
+    <div class="outro-buttons">
+      <button class="cta-btn">Explore Products</button>
+      <button class="secondary-btn">Join the Crew</button>
+    </div>
+  </div>
+
+  <div class="outro-footer">
+    <p>© 2025 Monster Energy. All Rights Reserved.</p>
+    <ul class="footer-links">
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+</section>
+
 
   <!-- Ionicons for Icons -->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
