--- a/index.html
+++ b/index.html
@@ -54,41 +54,42 @@
 
 
   <section class="product-overview">
-    <div class="header-1"><h1>hello water bottle</h1></div>
-    <div class="header-2"><h1>helloo grind shaker</h1></div>
+    <div class="header-1"><h1>Monster Energy</h1></div>
+    <div class="header-2"><h1>Unleash the Beast</h1></div>
 
     <div class="circular-mask"></div>
 
     <div class="tooltips">
         <div class="tooltip">
             <div class="icon">
-                <ion-icon name="water"></ion-icon>
+                <ion-icon name="flash"></ion-icon>
             </div>
             <div class="divider"></div>
             <div class="title">
-                <h2>Built to last</h2>
+                <h2>Energy That Lasts</h2>
             </div>
             <div class="description">
-                <p>Made from high-quality, BPA-free materials that ensure durability and safety for everyday use.</p>
+                <p>Packed with powerful ingredients and bold flavor, Monster gives you the boost to power through your day or night.</p>
             </div>
         </div>
 
-          <div class="tooltip">
+        <div class="tooltip">
             <div class="icon">
-                <ion-icon name="water"></ion-icon>
+                <ion-icon name="flame"></ion-icon>
             </div>
             <div class="divider"></div>
             <div class="title">
-                <h2>Built to last</h2>
+                <h2>Fuel the Fire</h2>
             </div>
             <div class="description">
-                <p>Made from high-quality, BPA-free materials that ensure durability and safety for everyday use.</p>
+                <p>Whether you’re grinding at work, gaming with friends, or chasing adrenaline, Monster keeps your fire burning strong.</p>
             </div>
         </div>
     </div>
     
     <div class="model-container"></div>
-  </section>
+</section>
+
 
 
 
@@ -123,5 +124,7 @@
 
   <!-- Custom Script -->
   <script type="module" src="./src/main.js"></script>
+  <div class="cursor"></div>
+
 </body>
 </html>
